small alignment issue on mobile

--- a/modules/hosts/client/css/host.css
+++ b/modules/hosts/client/css/host.css
@@ -591,7 +591,7 @@ and (orientation : landscape) {.left-nav-bar .navbar-fixed-side{width: 23%;}#set
 .availability{ margin-top: 1.2rem}
 #departureSession .ds_repeat_daily, #departureSession  .dsChangePrice{display: none;}
 
-.fixed-departure-onoffswitch{position:absolute;width:40px;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none; margin-left:21rem; margin-top: -2.6rem;}
+.fixed-departure-onoffswitch{position:absolute;width:40px;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none; margin-left:40%; margin-top: -2.6rem;}
 
 .limited_container .text-readable13{ margin-top:1rem;}
 .text-readable13 span { font-size:16px; color:#666;}
